--- a/pom.xml
+++ b/pom.xml
@@ -111,5 +111,18 @@
             <artifactId>jackson-core</artifactId>
             <version>2.9.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.23</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context-support -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>4.3.5.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
 </project>
